--- a/core/css/guest.css
+++ b/core/css/guest.css
@@ -336,8 +336,17 @@ form .warning input[type='checkbox']+label {
 }
 .two-factor-link {
 	display: inline-block;
-	padding: 12px;
 	color: rgba(255, 255, 255, 0.75);
+}
+.two-factor-link a.button {
+	padding: 10px;
+	border-radius: 3px;
+	color: #555 !important;
+	display: inline-block;
+	margin: 5px 0;
+	text-align: center;
+	width: 100%;
+	box-sizing: border-box
 }
 
 /* Additional login options */
